--- a/bicicletas.html
+++ b/bicicletas.html
@@ -30,7 +30,7 @@
 <header class="header-bg">
   <div class="header">
     <a href="./">
-      <img src="img/bikcraft.svg" alt="bikcraft" />
+      <img src="img/bikcraft.svg" width="136" height="32" alt="bikcraft"/>
     </a>
     <nav aria-label="primaria">
       <ul class="header-menu fonte-1-m cor-0">
@@ -52,7 +52,7 @@
 
   <div class="bicicletas container-2">
     <div class="bicicletas-imagem">
-      <img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
+      <img src="./img/bicicletas/nimbus.jpg"  width="1120" height="680" alt="Bicicleta preta">
       <span class="fonte-2-m cor-0">R$ 4999</span>
     </div>
 
@@ -64,19 +64,19 @@
         o que garante maior velocidade.</p>
       <ul class="fonte-1m cor-8">
         <li>
-          <img src="./img/icones/eletrica.svg" alt="">
+          <img src="./img/icones/eletrica.svg"  width="32" height="32" alt="">
           Motor elétrico
         </li>
         <li>
-          <img src="./img/icones/carbono.svg" alt="">
+          <img src="./img/icones/carbono.svg"  width="32" height="32" alt="">
           Fibra de carbono
         </li>
         <li>
-          <img src="./img/icones/velocidade.svg" alt="">
+          <img src="./img/icones/velocidade.svg"  width="32" height="32" alt="">
           50 km/h
         </li>
         <li>
-          <img src="./img/icones/rastreador.svg" alt="">
+          <img src="./img/icones/rastreador.svg"  width="32" height="32" alt="">
           rastreador
         </li>
       </ul>
@@ -87,7 +87,7 @@
   <div class="bicicletas-bg">
     <div class="bicicletas container-2">
       <div class="bicicletas-imagem">
-        <img src="./img/bicicletas/magic.jpg" alt="Bicicleta preta">
+        <img src="./img/bicicletas/magic.jpg" width="1120" height="680" alt="Bicicleta preta">
         <span class="fonte-2-m cor-0">R$ 2499</span>
       </div>
       <div class="bicicletas-conteudo">
@@ -98,19 +98,19 @@
           o que garante maior velocidade.</p>
         <ul class="fonte-1m cor-0">
           <li>
-            <img src="./img/icones/eletrica.svg" alt="">
+            <img src="./img/icones/eletrica.svg" width="32" height="32" alt="">
             Motor elétrico
           </li>
           <li>
-            <img src="./img/icones/carbono.svg" alt="">
+            <img src="./img/icones/carbono.svg" width="32" height="32" alt="">
             Fibra de carbono
           </li>
           <li>
-            <img src="./img/icones/velocidade.svg" alt="">
+            <img src="./img/icones/velocidade.svg" width="32" height="32" alt="">
             45 km/h
           </li>
           <li>
-            <img src="./img/icones/rastreador.svg" alt="">
+            <img src="./img/icones/rastreador.svg" width="32" height="32" alt="">
             rastreador
           </li>
         </ul>
@@ -121,7 +121,7 @@
 
   <div class="bicicletas container-2">
     <div class="bicicletas-imagem">
-      <img src="./img/bicicletas/nebula.jpg" alt="Bicicleta preta">
+      <img src="./img/bicicletas/nebula.jpg"  width="1120" height="680" alt="Bicicleta preta">
       <span class="fonte-2-m cor-0">R$ 3999</span>
     </div>
     <div class="bicicletas-conteudo">
@@ -132,19 +132,19 @@
         o que garante maior velocidade.</p>
       <ul class="fonte-1m cor-8">
         <li>
-          <img src="./img/icones/eletrica.svg" alt="">
+          <img src="./img/icones/eletrica.svg" width="32" height="32" alt="">
           Motor elétrico
         </li>
         <li>
-          <img src="./img/icones/carbono.svg" alt="">
+          <img src="./img/icones/carbono.svg" width="32" height="32"  alt="">
           Fibra de carbono
         </li>
         <li>
-          <img src="./img/icones/velocidade.svg" alt="">
+          <img src="./img/icones/velocidade.svg" width="32" height="32"  alt="">
           50 km/h
         </li>
         <li>
-          <img src="./img/icones/rastreador.svg" alt="">
+          <img src="./img/icones/rastreador.svg" width="32" height="32"  alt="">
           rastreador
         </li>
       </ul>
@@ -159,7 +159,7 @@
   </header>
   <footer class="footer-bg">
     <div class="footer container-2">
-      <img src="./img/bikcraft.svg" alt="Bikcraft">
+      <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contato">
         <h3 class="fonte-1-l cor-0">Contato</h3>
         <ul class="cor-5 fonte-2-l-b">
@@ -170,13 +170,13 @@
         </ul>
         <div class="footer-redes">
           <a href="./">
-            <img src="./img/redes/instagram.svg" alt="instagram">
+            <img src="./img/redes/instagram.svg"  width="32" height="32" alt="instagram">
           </a>
           <a href="./">
-            <img src="./img/redes/facebook.svg" alt="Facebook">
+            <img src="./img/redes/facebook.svg"   width="32" height="32" alt="Facebook">
           </a>
           <a href="./">
-            <img src="./img/redes/youtube.svg" alt="Youtube">
+            <img src="./img/redes/youtube.svg"  width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
