--- a/contato.html
+++ b/contato.html
@@ -92,7 +92,8 @@
       </div>
       <div class="col-2">
         <label for="mensagem">Mensagem</label>
-        <textarea rows="5"  id="mensagem name="mensagem" placeholder="O que você precisa?"></textarea>
+        <textarea rows="5"  id="mensagem name="mensagem" placeholder="O que você precisa?">
+        </textarea>
       </div>
       <button class="botao">Enviar mensagem</button>
       </form>
