--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <picture>
 
       <source srcset="./img/bicicletas/nimbus.jpg"> 
-        <img src="./img/fotos/introducao.jpg" alt="Bicicleta elétrica preta." />
+        <img media="(max-width: 800px)" src="./img/fotos/introducao.jpg" width="1280" height="1600" alt="Bicicleta elétrica preta." />
 
       </picture>
 
@@ -60,23 +60,26 @@
   </main>
   <article class="bicicletas-lista">
 
-    <h2 class="fonte-1-xl container-1 ">escolha a sua<span class="cor-p1">.</span></h2>
+    <h2 class="fonte-1-xl container-1 ">escolha a sua<span
+       class="cor-p1">.</span></h2>
 
     <ul>
       <a href="../bicicletas2/magic.html">
-        <li> <img src="./img/bicicletas/magic-home.jpg" alt="Bicicleta preta">
+        <li> <img src="./img/bicicletas/magic-home.jpg" width="920" height="1040" alt="Bicicleta preta">
           <h3 class="fonte-1-xl">Magic Might</h3>
           <span class="fonte-2-m cor-8">R$ 2499</span>
       </a>
+
       </li>
       <a href="../bicicletas2/nimbus.html">
-        <li> <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta">
+        <li> <img src="./img/bicicletas/nimbus-home.jpg" width="920" height="1040" alt="Bicicleta preta">
           <h3 class="fonte-1-xl">Nimbus Stark</h3>
           <span class="fonte-2-m cor-8">R$ 4999</span>
       </a>
+
       </li>
       <a href="../bicicletas2/nebula.html">
-        <li> <img src="./img/bicicletas/nebula-home.jpg" alt="Bicicleta branca">
+        <li> <img src="./img/bicicletas/nebula-home.jpg" width="920" height="1040" alt="Bicicleta branca">
           <h3 class="fonte-1-xl">Nebula Cosmic</h3>
           <span class="fonte-2-m cor-8">R$ 3999</span>
       </a>
@@ -96,14 +99,14 @@
         <a class="link" href="./bicicletas.html">Escolha um modelo</a>
         <div class="tecnologia-vantagens">
           <div>
-            <img src="./img/icones/eletrica.svg" alt="">
+            <img src="./img/icones/eletrica.svg"  width="24" height="24" alt="">
             <h3 class="fonte-1-m cor-0">Motor Elétrico</h3>
             <p class="fonte-2-m cor-5">Toda Bickraft é equipada com um motor elétrico que possui duração de até 120h. A
               bateria é recarregada com
               a sua energia gasta ao pedalar.</p>
           </div>
           <div>
-            <img src="./img/icones/rastreador.svg" alt="">
+            <img src="./img/icones/rastreador.svg" width="1280" height="1600" alt="">
             <h3 class="fonte-1-m cor-0">Rastreador</h3>
             <p class="fonte-2-m cor-5">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e
               sistema anti-furto para
@@ -111,28 +114,27 @@
           </div>
         </div>
       </div>
-      <div class="tecnologia-imagem"><img src="./img/fotos/tecnologia.jpg" alt=""></div>
+      <div class="tecnologia-imagem"><img src="./img/fotos/tecnologia.jpg"  width="1200" height="1920" alt=""></div>
     </div>
 
   </article>
   <section class="parceiros" aria aria-label="Nossos Parceiros">
     <h2 class="container-2 fonte-1-m-b">Nossos Parceiros<span class="cor-p1">.</span></h2>
     <ul>
-      <li><img src="./img/parceiros/caravan.svg" alt="Caravan"></li>
-      <li><img src="./img/parceiros/ranek.svg" alt="Ranec"></li>
-      <li><img src="./img/parceiros/handel.svg" alt="Hander"></li>
-      <li><img src="./img/parceiros/dogs.svg" alt="Dogs"></li>
-      <li><img src="./img/parceiros/lescone.svg" alt="Lescone"></li>
-      <li><img src="./img/parceiros/flexblog.svg" alt="Flexblog"></li>
-      <li><img src="./img/parceiros/wildbeast.svg" alt="wildbeast"></li>
-      <li><img src="./img/parceiros/surfbot.svg" alt="surfbot"></li>
-
+      <li><img src="./img/parceiros/caravan.svg"   width="140" height="38" alt="Caravan"></li>
+      <li><img src="./img/parceiros/ranek.svg"  width="149" height="36" alt="Ranec"></li>
+      <li><img src="./img/parceiros/handel.svg"  width="140" height="50" alt="Hander"></li>
+      <li><img src="./img/parceiros/dogs.svg"  width="152" height="39" alt="Dogs"></li>
+      <li><img src="./img/parceiros/lescone.svg"  width="208" height="41" alt="Lescone"></li>
+      <li><img src="./img/parceiros/flexblog.svg"  width="165" height="38" alt="Flexblog"></li>
+      <li><img src="./img/parceiros/wildbeast.svg" width="196" height="34" alt="wildbeast"></li>
+      <li><img src="./img/parceiros/surfbot.svg"  width="200" height="49" alt="surfbot"></li>
     </ul>
   </section>
 
   <section class="depoimento" aria-label="Depoimento">
     <div>
-      <img src="./img/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta Bikcraft">
+      <img src="./img/fotos/depoimento.jpg"  width="1560" height="1360" alt="Pessoa pedalando uma bicicleta Bikcraft">
     </div>
     <div class="depoimento-conteudo">
       <blockquote class="fonte-1-xl cor-p5">
@@ -177,7 +179,7 @@
   </article>
   <footer class="footer-bg">
     <div class="footer container-2">
-      <img src="./img/bikcraft.svg" alt="Bikcraft">
+      <img src="./img/bikcraft.svg"  width="136" height="32" alt="Bikcraft">
       <div class="footer-contato">
         <h3 class="fonte-1-l cor-0">Contato</h3>
         <ul class="cor-5 fonte-2-l-b">
@@ -188,13 +190,13 @@
         </ul>
         <div class="footer-redes">
           <a href="./">
-            <img src="./img/redes/instagram.svg" alt="instagram">
+            <img src="./img/redes/instagram.svg"   width="32" height="32" alt="instagram">
           </a>
           <a href="./">
-            <img src="./img/redes/facebook.svg" alt="Facebook">
+            <img src="./img/redes/facebook.svg"  width="32" height="32" alt="Facebook">
           </a>
           <a href="./">
-            <img src="./img/redes/youtube.svg" alt="Youtube">
+            <img src="./img/redes/youtube.svg"   width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
